fix: enhance scrollbar styling and update text selection background color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: #050505;
+}
+::-webkit-scrollbar-thumb {
+    background: #c2b280;
+    border-radius: 10px;
+}
